ionos_sbx/analytics/superset/templates/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset-redis
  template:
    metadata:
      labels:
        app: superset-redis
    spec:
      containers:
        - name: redis
          image: registry.k8s.io/redis:7
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis
              mountPath: /data
