ionos_sbx/analytics/superset/templates/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-db
spec:
  selector:
    app: superset-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
