ionos_sbx/analytics/superset/templates/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-redis
spec:
  selector:
    app: superset-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
