ionos_sbx/analytics/superset/templates/service-superset.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-app
spec:
  selector:
    app: superset-app
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
